Minor graphical fixes when tab tree in sidebar
Adding "overflow:hidden" to tt-sidebar prevents a useless
mini-scrollbar appearing in fullscreen mode or when the sidebar is
collapsed.

Explicitly setting the "orient" attribute on tt-splitter ensures that
the mouse cursor shows the correct resizing directions.

--- a/skin/tt-other.css
+++ b/skin/tt-other.css
@@ -9,6 +9,10 @@
 	pointer-events: none; /* preventing the arrow flickering when mouse pointer goes over that arrow and that arrow overlaps 'toolbar' */
 }
 
+#tt-sidebar {
+	overflow: hidden;
+}
+
 /* Full screen mode */
 
 #tt-toolbar[moz-collapsed="true"] { /* do not collapse in fullscreen mode*/
